# projek-akhir2

./: .gitmodules  CMakeLists.txt  README.md  init.sh
.cache/clangd/index/: glad.c.35D612243C6860B3.idx  glad.h.A2EDD8D35A6CB468.idx  graph.cpp.C404BFF80AB0E6EE.idx  graph.hpp.0783A60EF8FF37A3.idx  imconfig.h.770E84608163933E.idx  imgui.cpp.E53F9BA46CE11B0F.idx  imgui.h.801B45F87B5C29F3.idx  imgui_demo.cpp.561B6ED2FCCA4149.idx  imgui_draw.cpp.1AD8201B038BD800.idx  imgui_impl_glfw.cpp.668855231AC3F65A.idx  imgui_impl_glfw.h.08C72DD92A7C2FC6.idx  imgui_impl_opengl3.cpp.03E56749747A4F71.idx  imgui_impl_opengl3.h.CFD86B0FECAEC0B6.idx  imgui_impl_opengl3_loader.h.79462DC55F55C80B.idx  imgui_internal.h.9313248C8FA2BD4A.idx  imgui_tables.cpp.76B5BD3E458F0451.idx  imgui_widgets.cpp.0899D9BDBF7C11BE.idx  imstb_rectpack.h.887139C6A475D719.idx  imstb_textedit.h.B8D173612D8D0877.idx  imstb_truetype.h.47EA3242013F62F0.idx  khrplatform.h.3BBFCCD35584EAD8.idx  main.cpp.E5515440E3247E39.idx  program.cpp.21E7F04912ED329B.idx  program.hpp.A980D20805E3EBBC.idx  utils.cpp.356665600438CFC1.idx  utils.hpp.54341FB5832BE47E.idx
glad/include/glad/: glad.h
glad/src/: glad.c
include/: graph.hpp  gui_vars.hpp  program.hpp  utils.hpp
include/gui/: menu_items.hpp  nav_bar.hpp  utils.hpp  workspace.hpp
src/: graph.cpp  gui_vars.cpp  main.cpp  program.cpp  utils.cpp
src/gui/: menu_items.cpp  nav_bar.cpp  utils.cpp  workspace.cpp
